--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -10,5 +10,13 @@ label.number = number
 label.zipcode = Zipcode
 label.city = City
 label.addUser = Add user
+label.tripName = Trip name
+label.startDate = Start date
+label.endDate = End date
+label.organisor = Organisor
+label.startLocation = Start location
+button.addTrip = Add trip
+button.updateTrip = Update trip
+button.deleteTrip = Delete trip
 
 
