--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -1,14 +1,21 @@
-label.username = Username
-label.password = Password
+label.username = Gebruikersnaam
+label.password = Wachtwoord
 label.email = E-mail
-label.telephone = Telephone
-label.firstname = Firstname
-label.lastname = Lastname
-label.dateOfBirth = Date of birth
-label.street = street
-label.number = number
-label.zipcode = Zipcode
-label.city = City
-label.addUser = Add user
-
+label.telephone = Telefoonnummer
+label.firstname = Voornaam
+label.lastname = Achternaam
+label.dateOfBirth = Geboortedatum
+label.street = Straat
+label.number = Huisnummer
+label.zipcode = Postcode
+label.city = Stad
+label.addUser = Gebruiker toevoegen
+label.tripName = Tripnaam
+label.startDate = Startdatum
+label.endDate = Einddatum
+label.organisor = Organisor
+label.startLocation = Start locatie
+button.addTrip = Trip toevoegen
+button.updateTrip = Trip updaten
+button.deleteTrip = Trip deleten
 
