--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -13,7 +13,7 @@ label.addUser = Add user
 label.tripName = Trip name
 label.startDate = Start date
 label.endDate = End date
-label.organisor = Organisor
+label.organiser = Organisor
 label.startLocation = Start location
 button.addTrip = Add trip
 button.updateTrip = Update trip
