--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -13,7 +13,7 @@ label.addUser = Gebruiker toevoegen
 label.tripName = Tripnaam
 label.startDate = Startdatum
 label.endDate = Einddatum
-label.organisor = Organisor
+label.organiser = Organisor
 label.startLocation = Start locatie
 button.addTrip = Trip toevoegen
 button.updateTrip = Trip updaten
