--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -18,5 +18,6 @@ label.startLocation = Start location
 button.addTrip = Add trip
 button.updateTrip = Update trip
 button.deleteTrip = Delete trip
+button.deleteUser=Delete User
 
 
