--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -18,4 +18,5 @@ label.startLocation = Start locatie
 button.addTrip = Trip toevoegen
 button.updateTrip = Trip updaten
 button.deleteTrip = Trip deleten
+button.deleteUser=Verwijder Gebruiker
 
