--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -19,5 +19,6 @@ button.addTrip = Add trip
 button.updateTrip = Update trip
 button.deleteTrip = Delete trip
 button.deleteUser=Delete User
+label.updateUser=Update User
 
 
