--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -19,4 +19,5 @@ button.addTrip = Trip toevoegen
 button.updateTrip = Trip updaten
 button.deleteTrip = Trip deleten
 button.deleteUser=Verwijder Gebruiker
+label.updateUser=Update Gebruiker
 
