--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -20,4 +20,5 @@ button.updateTrip = Trip updaten
 button.deleteTrip = Trip deleten
 button.deleteUser=Verwijder Gebruiker
 label.updateUser=Update Gebruiker
-
+label.updateTrip=Update trip
+label.deleteTrip=Delete trip
