--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -20,5 +20,7 @@ button.updateTrip = Update trip
 button.deleteTrip = Delete trip
 button.deleteUser=Delete User
 label.updateUser=Update User
+label.updateTrip=Update trip
+label.deleteTrip=Delete trip
 
 
