--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -22,5 +22,6 @@ button.deleteUser=Delete User
 label.updateUser=Update User
 label.updateTrip=Update trip
 label.deleteTrip=Delete trip
+label.tripDescription=Description
 
 
