--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -22,3 +22,4 @@ button.deleteUser=Verwijder Gebruiker
 label.updateUser=Update Gebruiker
 label.updateTrip=Update trip
 label.deleteTrip=Delete trip
+label.tripDescription=Beschrijving
