--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -20,6 +20,8 @@ button.updateTrip = Update trip
 button.deleteTrip = Delete trip
 button.deleteUser=Delete User
 label.updateUser=Update User
+label.adres=Address
+label.addStopPlaats=Add StopPlace
 label.updateTrip=Update trip
 label.deleteTrip=Delete trip
 label.tripDescription=Description
