--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -23,3 +23,6 @@ label.updateUser=Update Gebruiker
 label.updateTrip=Update trip
 label.deleteTrip=Delete trip
 label.tripDescription=Beschrijving
+label.adres=Adres
+label.addStopPlaats=Voeg stopplaats toe
+
