--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -22,6 +22,7 @@ button.deleteUser=Delete User
 label.updateUser=Update User
 label.adres=Address
 label.addStopPlaats=Add StopPlace
+label.addTrip=Add trip
 label.updateTrip=Update trip
 label.deleteTrip=Delete trip
 label.tripDescription=Description
