--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -25,4 +25,5 @@ label.deleteTrip=Delete trip
 label.tripDescription=Beschrijving
 label.adres=Adres
 label.addStopPlaats=Voeg stopplaats toe
+label.addTrip=Add trip
 
