--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -26,5 +26,7 @@ label.addTrip=Add trip
 label.updateTrip=Update trip
 label.deleteTrip=Delete trip
 label.tripDescription=Description
+label.tripType=Trip type
+
 
 
