--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -26,4 +26,4 @@ label.tripDescription=Beschrijving
 label.adres=Adres
 label.addStopPlaats=Voeg stopplaats toe
 label.addTrip=Add trip
-
+label.tripType=Trip type
