--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -27,6 +27,8 @@ label.updateTrip=Update trip
 label.deleteTrip=Delete trip
 label.tripDescription=Description
 label.tripType=Trip type
+label.tripCategorie=Category
+button.addTripCategorie=Add category
 
 
 
