--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -27,3 +27,5 @@ label.adres=Adres
 label.addStopPlaats=Voeg stopplaats toe
 label.addTrip=Add trip
 label.tripType=Trip type
+label.tripCategorie=Category
+button.addTripCategorie=Add category
