--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -29,6 +29,8 @@ label.tripDescription=Description
 label.tripType=Trip type
 label.tripCategorie=Category
 button.addTripCategorie=Add category
+label.vrijgegeven=Released
+label.updateStopPlaats=Update Stop Place
 
 
 
