--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -29,3 +29,5 @@ label.addTrip=Add trip
 label.tripType=Trip type
 label.tripCategorie=Category
 button.addTripCategorie=Add category
+label.vrijgegeven=Vrijgegeven
+label.updateStopPlaats=Update Stop Plaats
