email notification part 2

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -31,6 +31,12 @@ label.tripCategorie=Category
 button.addTripCategorie=Add category
 label.vrijgegeven=Released
 label.updateStopPlaats=Update Stop Place
+label.ChangedTo=changed to
+label.NotificationMailTitle=Send notification mail
+label.NotificationMailQuestion=Send email to all participants?
+label.NotificationMailOrganiserMessage=Organiser message
+label.NotificationMailChangesOccured=The following changes occured
+
 
 
 
