--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -25,9 +25,14 @@ label.deleteTrip=Delete trip
 label.tripDescription=Beschrijving
 label.adres=Adres
 label.addStopPlaats=Voeg stopplaats toe
-label.addTrip=Add trip
+label.addTrip=Trip toevoegen
 label.tripType=Trip type
-label.tripCategorie=Category
-button.addTripCategorie=Add category
+label.tripCategorie=Categorie
+button.addTripCategorie=Categorie toevoegen
 label.vrijgegeven=Vrijgegeven
 label.updateStopPlaats=Update Stop Plaats
+label.ChangedTo=gewijzigd naar
+label.NotificationMailTitle=Zend mail
+label.NotificationMailQuestion=Email naar alle deelnemers zenden?
+label.NotificationMailOrganiserMessage=Bericht organisator
+label.NotificationMailChangesOccured=De volgende wijzigingen zijn gebeurt
