--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -36,6 +36,9 @@ label.NotificationMailTitle=Send notification mail
 label.NotificationMailQuestion=Send email to all participants?
 label.NotificationMailOrganiserMessage=Organiser message
 label.NotificationMailChangesOccured=The following changes occured
+label.tripCategorieName=Category name
+label.addTripCategorie=Add category
+label.updateTripCategorie=Update category
 
 
 
