--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -36,3 +36,6 @@ label.NotificationMailTitle=Zend mail
 label.NotificationMailQuestion=Email naar alle deelnemers zenden?
 label.NotificationMailOrganiserMessage=Bericht organisator
 label.NotificationMailChangesOccured=De volgende wijzigingen zijn gebeurt
+label.tripCategorieName=Categorie naam
+label.addTripCategorie=Categorie toevoegen
+label.updateTripCategorie=Update categorie
