--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -39,6 +39,7 @@ label.NotificationMailChangesOccured=The following changes occured
 label.tripCategorieName=Category name
 label.addTripCategorie=Add category
 label.updateTripCategorie=Update category
+label.join=Join
 
 
 
