--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -39,3 +39,4 @@ label.NotificationMailChangesOccured=De volgende wijzigingen zijn gebeurt
 label.tripCategorieName=Categorie naam
 label.addTripCategorie=Categorie toevoegen
 label.updateTripCategorie=Update categorie
+label.join=Deelnemen
