--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -40,6 +40,7 @@ label.tripCategorieName=Category name
 label.addTripCategorie=Add category
 label.updateTripCategorie=Update category
 label.join=Join
+label.leaveTrip=Leave
 
 
 
