--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -40,3 +40,4 @@ label.tripCategorieName=Categorie naam
 label.addTripCategorie=Categorie toevoegen
 label.updateTripCategorie=Update categorie
 label.join=Deelnemen
+label.leaveTrip=Uitschrijven
