--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -41,6 +41,8 @@ label.addTripCategorie=Add category
 label.updateTripCategorie=Update category
 label.join=Join
 label.leaveTrip=Leave
+label.name=Name
+label.TripNotificatie=Notification
 
 
 
