--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -41,3 +41,5 @@ label.addTripCategorie=Categorie toevoegen
 label.updateTripCategorie=Update categorie
 label.join=Deelnemen
 label.leaveTrip=Uitschrijven
+label.name=Naam
+label.TripNotificatie=Mededeling
