--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -47,7 +47,8 @@ label.Home=Home
 label.About=About
 label.Trip=Trip
 label.Language=English
-label.ChooseLanguage=Choose a language
+label.ChooseLanguage=Choose language
+label.ChooseLanguage2=Please choose a language
 
 
 
