--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -43,3 +43,8 @@ label.join=Deelnemen
 label.leaveTrip=Uitschrijven
 label.name=Naam
 label.TripNotificatie=Mededeling
+label.Home=Startpagina
+label.About=Over ons
+label.Trip=Trip
+label.Language=Dutch
+label.ChooseLanguage=Kies een taal
