--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,55 +1,76 @@
-label.username = Username
-label.password = Password
-label.email = E-mail
-label.telephone = Telephone
-label.firstname = Firstname
-label.lastname = Lastname
-label.dateOfBirth = Date of birth
-label.street = street
-label.number = number
-label.zipcode = Zipcode
-label.city = City
-label.addUser = Add user
-label.tripName = Trip name
-label.startDate = Start date
-label.endDate = End date
-label.organiser = Organisor
-label.startLocation = Start location
-button.addTrip = Add trip
-button.updateTrip = Update trip
-button.deleteTrip = Delete trip
-button.deleteUser=Delete User
-label.updateUser=Update User
-label.adres=Address
-label.addStopPlaats=Add StopPlace
-label.addTrip=Add trip
-label.updateTrip=Update trip
-label.deleteTrip=Delete trip
+label.username=Nom d'utilisateur
+label.password=Mot de passe
+label.email=E-mail
+label.telephone=T&eacute;l&eacute;phone
+label.firstname=Pr&eacute;nom
+label.lastname=Nom
+label.dateOfBirth=Date de naissance
+label.street=rue
+label.number=nombre
+label.zipcode=Code postal
+label.city=Ville
+label.addUser=Ajouter un utilisateur
+label.tripName=Nom de voyage
+label.startDate=Date de d&eacute;but
+label.endDate=Date de fin
+label.organiser=Organiseur
+label.startLocation=emplacement D&eacute;marrer
+label.updateUser=Mettre &agrave; jour l'utilisateur
+label.address=Adresse
+label.addTrip=Ajouter un voyage
+label.updateTrip=Mise &agrave; jour voyage
+label.deleteTrip=Supprimer voyage
 label.tripDescription=Description
-label.tripType=Trip type
-label.tripCategorie=Category
-button.addTripCategorie=Add category
-label.vrijgegeven=Released
-label.updateStopPlaats=Update Stop Place
-label.ChangedTo=changed to
-label.NotificationMailTitle=Send notification mail
-label.NotificationMailQuestion=Send email to all participants?
-label.NotificationMailOrganiserMessage=Organiser message
-label.NotificationMailChangesOccured=The following changes occured
-label.tripCategorieName=Category name
-label.addTripCategorie=Add category
-label.updateTripCategorie=Update category
-label.join=Join
-label.leaveTrip=Leave
-label.name=Name
+label.tripType=Type de voyage
+label.tripCategory=Cat&eacute;gorie
+label.Released=Sortie
+label.ChangedTo=chang&eacute; &agrave;
+label.NotificationMailTitle=mail de notification d'envoi
+label.NotificationMailQuestion=Envoyer un email &agrave; tous les participants?
+label.NotificationMailOrganiserMessage=Organisateur message d'
+label.NotificationMailChangesOccured=Les changements suivants survenus
+label.NotificationMailNoMessage=Pas de message.
+label.tripCategoryName=Nom Cat&eacute;gorie
+label.addTripCategory=Ajouter une cat&eacute;gorie
+label.updateTripCategory=Mise &agrave; jour cat&eacute;gorie
+label.deleteTripCategory=Supprimer cat&eacute;gorie
+label.join=Joignez-vous
+label.leaveTrip=Quitter
+label.name=Nom
 label.TripNotificatie=Notification
-label.Home=Home
-label.About=About
-label.Trip=Trip
-label.Language=English
-label.ChooseLanguage=Choose language
-label.ChooseLanguage2=Please choose a language
-
-
-
-
+label.Home=Accueil
+label.About=A propos
+label.Trip=voyage
+label.Language=French
+label.ChooseLanguage=Choisissez une langue
+label.Register=S'enregistrer
+label.SignIn=Connexion
+label.Welcome=Bienvenue
+label.Profile=profil
+label.MyTrips=Mes voyages
+label.LogOut=D&eacute;connexion
+label.SearchTrip=voyage recherche
+label.StoppingPoint=point d'arr&ecirc;t
+label.AddStoppingPoint=Ajouter point d'arr&ecirc;t
+label.UpdateStoppingPoint=point d'arr&ecirc;t mise &agrave; jour
+label.TripOverview=aper&ccedil;u de voyage
+label.TripSearchResult=r&eacute;sultat de recherche de voyage
+label.ViewTrip=Voir voyage
+label.StoppingPoints=Points d'arr&ecirc;t
+label.DeleteStoppingPoint=Supprimer point d'arr&ecirc;t
+label.ReleaseStoppingPoint=point d'arr&ecirc;t de parution
+label.AddNewStoppingPoint=Ajouter un nouveau point d'arr&ecirc;t
+label.Categories=Cat&eacute;gories
+label.AddNewCategory=Ajouter une nouvelle cat&eacute;gorie
+label.ChangePassword=Changer mot de passe
+label.CurrentPassword=Mot de passe actuel
+label.NewPassword=Nouveau mot de passe
+label.ConfirmNewPassword=Confirmer nouveau mot de passe
+label.UserProfile=profil de l'utilisateur
+label.General=G&eacute;n&eacute;ral
+label.ShowPosition=Voir la position
+label.UpdateProfile=Mettre &agrave; jour le profil
+label.Cancel=Annuler
+label.UserRegistration=inscription d'utilisateur
+label.Users=Users
+label.DeleteUser=Supprimer l'utilisateur
