--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -1,50 +1,76 @@
 label.username = Gebruikersnaam
-label.password = Wachtwoord
+label.password = Paswoord
 label.email = E-mail
-label.telephone = Telefoonnummer
+label.telephone = Telefoon
 label.firstname = Voornaam
 label.lastname = Achternaam
 label.dateOfBirth = Geboortedatum
-label.street = Straat
-label.number = Huisnummer
+label.street = straat
+label.number = nummer
 label.zipcode = Postcode
 label.city = Stad
 label.addUser = Gebruiker toevoegen
-label.tripName = Tripnaam
+label.tripName = Trip naam
 label.startDate = Startdatum
 label.endDate = Einddatum
-label.organiser = Organisor
-label.startLocation = Start locatie
-button.addTrip = Trip toevoegen
-button.updateTrip = Trip updaten
-button.deleteTrip = Trip deleten
-button.deleteUser=Verwijder Gebruiker
-label.updateUser=Update Gebruiker
-label.updateTrip=Update trip
-label.deleteTrip=Delete trip
-label.tripDescription=Beschrijving
-label.adres=Adres
-label.addStopPlaats=Voeg stopplaats toe
+label.organiser = Organisator
+label.startLocation = Startlocatie
+label.updateUser=Gebruiker wijzigen
+label.address=Adres
 label.addTrip=Trip toevoegen
+label.updateTrip=Trip wijzigen
+label.deleteTrip=Trip verwijderen
+label.tripDescription=Beschrijving
 label.tripType=Trip type
-label.tripCategorie=Categorie
-button.addTripCategorie=Categorie toevoegen
-label.vrijgegeven=Vrijgegeven
-label.updateStopPlaats=Update Stop Plaats
+label.tripCategory=Categorie
+label.Released=Vrijgegeven
 label.ChangedTo=gewijzigd naar
-label.NotificationMailTitle=Zend mail
-label.NotificationMailQuestion=Email naar alle deelnemers zenden?
-label.NotificationMailOrganiserMessage=Bericht organisator
-label.NotificationMailChangesOccured=De volgende wijzigingen zijn gebeurt
-label.tripCategorieName=Categorie naam
-label.addTripCategorie=Categorie toevoegen
-label.updateTripCategorie=Update categorie
-label.join=Deelnemen
-label.leaveTrip=Uitschrijven
+label.NotificationMailTitle=Zend notificatie mail
+label.NotificationMailQuestion=Email naar alle deelnemers verzenden?
+label.NotificationMailOrganiserMessage=Bericht van de organisator
+label.NotificationMailChangesOccured=De volgende wijzigen zijn gebeurt
+label.NotificationMailNoMessage=Geen bericht.
+label.tripCategoryName=Categorie naam
+label.addTripCategory=Categorie toevoegen
+label.updateTripCategory=Categorie wijzigen
+label.deleteTripCategory=Categorie verwijderen
+label.join=Treed toe
+label.leaveTrip=Vertrek
 label.name=Naam
-label.TripNotificatie=Mededeling
+label.TripNotificatie=Notificatie
 label.Home=Startpagina
 label.About=Over ons
 label.Trip=Trip
 label.Language=Dutch
 label.ChooseLanguage=Kies een taal
+label.Register=Registreer
+label.SignIn=Aanmelden
+label.Welcome=Welkom
+label.Profile=Profiel
+label.MyTrips=Mijn trips
+label.LogOut=Afmelden
+label.SearchTrip=Zoek trip
+label.StoppingPoint=Stopplaats
+label.AddStoppingPoint=Stopplaats toevoegen
+label.UpdateStoppingPoint=Stopplaats wijzigen
+label.TripOverview=Trip overzicht
+label.TripSearchResult=Trip zoek resultaat
+label.ViewTrip=Bekijk trip
+label.StoppingPoints=Stopplaatsen
+label.DeleteStoppingPoint=Stopplaats verwijderen
+label.ReleaseStoppingPoint=Stopplaats vrijgeven
+label.AddNewStoppingPoint=Nieuwe stopplaats toevoegen
+label.Categories=Categorie&euml;n
+label.AddNewCategory=Nieuwe categorie toevoegen
+label.ChangePassword=Wijzig paswoord
+label.CurrentPassword=Huidig paswoord
+label.NewPassword=Nieuw paswoord
+label.ConfirmNewPassword=Bevestig nieuw paswoord
+label.UserProfile=Gebruikers profiel
+label.General=Algemeen
+label.ShowPosition=Toon positie
+label.UpdateProfile=Profiel wijzigen
+label.Cancel=Annuleren
+label.UserRegistration=Gebruikers registratie
+label.Users=Gebruikers
+label.DeleteUser=Verwijder gebruiker
