--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,55 +1,76 @@
-label.username = Username
-label.password = Password
-label.email = E-mail
-label.telephone = Telephone
-label.firstname = Firstname
-label.lastname = Lastname
-label.dateOfBirth = Date of birth
-label.street = street
-label.number = number
-label.zipcode = Zipcode
-label.city = City
-label.addUser = Add user
-label.tripName = Trip name
-label.startDate = Start date
-label.endDate = End date
-label.organiser = Organisor
-label.startLocation = Start location
-button.addTrip = Add trip
-button.updateTrip = Update trip
-button.deleteTrip = Delete trip
-button.deleteUser=Delete User
+label.username=Benutzername
+label.password=Passwort
+label.email=E-Mail
+label.telephone=Telefon
+label.firstname=Vorname
+label.lastname=Nachname
+label.dateOfBirth=Geburtsdatum
+label.street=Stra&szlig;e
+label.number=Anzahl
+label.zipcode=PLZ
+label.city=City
+label.addUser=Benutzer hinzuf&uuml;gen
+label.tripName=Trip Namen
+label.startDate=Startdatum
+label.endDate=Enddatum
+label.organiser=Organisator
+label.startLocation=Start Standort
 label.updateUser=Update User
-label.adres=Address
-label.addStopPlaats=Add StopPlace
-label.addTrip=Add trip
+label.address=Adresse
+label.addTrip=Trip hinzuf&uuml;gen
 label.updateTrip=Update trip
-label.deleteTrip=Delete trip
-label.tripDescription=Description
-label.tripType=Trip type
-label.tripCategorie=Category
-button.addTripCategorie=Add category
-label.vrijgegeven=Released
-label.updateStopPlaats=Update Stop Place
-label.ChangedTo=changed to
-label.NotificationMailTitle=Send notification mail
-label.NotificationMailQuestion=Send email to all participants?
-label.NotificationMailOrganiserMessage=Organiser message
-label.NotificationMailChangesOccured=The following changes occured
-label.tripCategorieName=Category name
-label.addTripCategorie=Add category
-label.updateTripCategorie=Update category
+label.deleteTrip=L&ouml;schen Reise
+label.tripDescription=Beschreibung
+label.tripType=Reiseart
+label.tripCategory=Kategorie
+label.Released=Freigegeben
+label.ChangedTo=ge&auml;ndert
+label.NotificationMailTitle=Senden Benachrichtigungsmail
+label.NotificationMailQuestion=E-Mail an alle Teilnehmer?
+label.NotificationMailOrganiserMessage=Veranstalter Nachricht
+label.NotificationMailChangesOccured=Die folgenden &Auml;nderungen aufgetreten
+label.NotificationMailNoMessage=keine Nachricht.
+label.tripCategoryName=Kategorie Namen
+label.addTripCategory=Kategorie hinzuf&uuml;gen
+label.updateTripCategory=Update Kategorie
+label.deleteTripCategory=Kategorie l&ouml;schen
 label.join=Join
-label.leaveTrip=Leave
+label.leaveTrip=hinterlassen
 label.name=Name
-label.TripNotificatie=Notification
+label.TripNotificatie=Benachrichtigung
 label.Home=Home
-label.About=About
+label.About=&Uuml;ber
 label.Trip=Trip
-label.Language=English
-label.ChooseLanguage=Choose language
-label.ChooseLanguage2=Please choose a language
-
-
-
-
+label.Language=German
+label.ChooseLanguage=W&auml;hlen Sie eine Sprache
+label.Register=Register
+label.SignIn=Anmelden
+label.Welcome=Willkommen
+label.Profile=Profil
+label.MyTrips=Meine Reisen
+label.LogOut=Abmelden
+label.SearchTrip=Search Reise
+label.StoppingPoint=Haltepunkt
+label.AddStoppingPoint=Hinzuf&uuml;gen Haltepunkt
+label.UpdateStoppingPoint=Update Haltepunkt
+label.TripOverview=Trip im &Uuml;berblick
+label.TripSearchResult=Trip Suchergebnis
+label.ViewTrip=View Reise
+label.StoppingPoints=Haltestellen
+label.DeleteStoppingPoint=L&ouml;schen Haltepunkt
+label.ReleaseStoppingPoint=Release Haltepunkt
+label.AddNewStoppingPoint=Hinzuf&uuml;gen neuer Haltepunkt
+label.Categories=Kategorien
+label.AddNewCategory=Neue Kategorie hinzuf&uuml;gen
+label.ChangePassword=Passwort &auml;ndern
+label.CurrentPassword=Aktuelles Passwort
+label.NewPassword=Neues Passwort
+label.ConfirmNewPassword=Neues Kennwort best&auml;tigen
+label.UserProfile=Benutzerprofil
+label.General=General
+label.ShowPosition=Position anzeigen
+label.UpdateProfile=Update-Profil
+label.Cancel=Abbrechen
+label.UserRegistration=Benutzer-Registrierung
+label.Users=Users
+label.DeleteUser=Benutzer l&ouml;schen
