--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -74,3 +74,5 @@ label.Cancel=Annuler
 label.UserRegistration=inscription d'utilisateur
 label.Users=Users
 label.DeleteUser=Supprimer l'utilisateur
+label.equipment = Fournitures
+label.notification = Communication
