--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -74,3 +74,5 @@ label.Cancel=Annuleren
 label.UserRegistration=Gebruikers registratie
 label.Users=Gebruikers
 label.DeleteUser=Verwijder gebruiker
+label.equipment=Benodigdheden
+label.notification=Mededeling
