--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -74,5 +74,5 @@ label.Cancel=Abbrechen
 label.UserRegistration=Benutzer-Registrierung
 label.Users=Users
 label.DeleteUser=Benutzer l&ouml;schen
-label.equipment = Supplies
+label.equipment = Supplies Gruppe
 label.notification = Communication
