--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -74,5 +74,5 @@ label.Cancel=Annuler
 label.UserRegistration=inscription d'utilisateur
 label.Users=Users
 label.DeleteUser=Supprimer l'utilisateur
-label.equipment = Fournitures
+label.equipment = Groupe fournitures
 label.notification = Communication
