profile + beginning validation register

--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -74,3 +74,4 @@ label.Cancel=Annuler
 label.UserRegistration=inscription d'utilisateur
 label.Users=Users
 label.DeleteUser=Supprimer l'utilisateur
+label.ReceiveNotification=Recevoir des notifications
