--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -74,3 +74,4 @@ label.Cancel=Abbrechen
 label.UserRegistration=Benutzer-Registrierung
 label.Users=Users
 label.DeleteUser=Benutzer l&ouml;schen
+label.ReceiveNotification=Benachrichtigungen
