--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -74,6 +74,7 @@ label.Cancel=Cancel
 label.UserRegistration=User registration
 label.Users=Users
 label.DeleteUser=Delete user
+label.ReceiveNotification=Receive notifications
 
 
 
