manage participants equipement

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -76,3 +76,5 @@ label.Users=Users
 label.DeleteUser=Benutzer l&ouml;schen
 label.equipment = Supplies Gruppe
 label.notification = Communication
+label.IndividualEquipment=Individuelle Ausstattung
+label.ManageParticipants=Mitglieder verwalten
