--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -76,7 +76,7 @@ label.Users=Users
 label.DeleteUser=Delete user
 label.equipment=Group equipment
 label.notification=Notifications
-
-
+label.IndividualEquipment=Individual equipment
+label.ManageParticipants=Manage participants
 
 
