--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -76,3 +76,5 @@ label.Users=Users
 label.DeleteUser=Supprimer l'utilisateur
 label.equipment = Groupe fournitures
 label.notification = Communication
+label.IndividualEquipment=Equipement individuel
+label.ManageParticipants=Gérer les membres
