--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -76,3 +76,5 @@ label.Users=Gebruikers
 label.DeleteUser=Verwijder gebruiker
 label.equipment=Groepsbenodigdheden
 label.notification=Mededeling
+label.IndividualEquipment=Individuele benodigdheden
+label.ManageParticipants=Beheer deelnemers
