--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -79,3 +79,4 @@ label.equipment = Supplies Gruppe
 label.notification = Communication
 label.IndividualEquipment=Individuelle Ausstattung
 label.ManageParticipants=Mitglieder verwalten
+label.updateParticipant=Update Participant
