--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -79,5 +79,6 @@ label.equipment=Group equipment
 label.notification=Notifications
 label.IndividualEquipment=Individual equipment
 label.ManageParticipants=Manage participants
+label.updateParticipant=Update Participant
 
 
