--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -78,3 +78,4 @@ label.equipment=Groepsbenodigdheden
 label.notification=Mededeling
 label.IndividualEquipment=Individuele benodigdheden
 label.ManageParticipants=Beheer deelnemers
+label.updateParticipant=Update Participant
