--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -78,3 +78,4 @@ label.equipment = Groupe fournitures
 label.notification = Communication
 label.IndividualEquipment=Equipement individuel
 label.ManageParticipants=Gérer les membres
+label.updateParticipant=Update Participant
