--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -80,3 +80,4 @@ label.notification = Communication
 label.IndividualEquipment=Individuelle Ausstattung
 label.ManageParticipants=Mitglieder verwalten
 label.updateParticipant=Update Participant
+label.Participants=Deelnemers
