--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -80,5 +80,6 @@ label.notification=Notifications
 label.IndividualEquipment=Individual equipment
 label.ManageParticipants=Manage participants
 label.updateParticipant=Update Participant
+label.Participants=Participants
 
 
