--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -79,3 +79,4 @@ label.notification = Communication
 label.IndividualEquipment=Equipement individuel
 label.ManageParticipants=Gérer les membres
 label.updateParticipant=Update Participant
+label.Participants=Deelnemers
