--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -78,4 +78,5 @@ label.equipment=Groepsbenodigdheden
 label.notification=Mededeling
 label.IndividualEquipment=Individuele benodigdheden
 label.ManageParticipants=Beheer deelnemers
-label.updateParticipant=Update Participant
+label.updateParticipant=Deelnemer wijzigen
+label.Participants=Deelnemers
