--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -81,5 +81,6 @@ label.IndividualEquipment=Individual equipment
 label.ManageParticipants=Manage participants
 label.updateParticipant=Update Participant
 label.Participants=Participants
+label.loginError=Login Failed
 
 
