--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -80,3 +80,4 @@ label.IndividualEquipment=Equipement individuel
 label.ManageParticipants=Gérer les membres
 label.updateParticipant=Update Participant
 label.Participants=Deelnemers
+label.loginError=Login Failed
