--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -80,3 +80,4 @@ label.IndividualEquipment=Individuele benodigdheden
 label.ManageParticipants=Beheer deelnemers
 label.updateParticipant=Deelnemer wijzigen
 label.Participants=Deelnemers
+label.loginError=Login Failed
