--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -81,3 +81,4 @@ label.IndividualEquipment=Individuelle Ausstattung
 label.ManageParticipants=Mitglieder verwalten
 label.updateParticipant=Update Participant
 label.Participants=Deelnemers
+label.loginError=Login Failed
