--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -82,5 +82,7 @@ label.ManageParticipants=Manage participants
 label.updateParticipant=Update Participant
 label.Participants=Participants
 label.loginError=Login Failed
+label.ManageStoppingPoints=Manage stopping points
+label.ReceiveNotification=Ontvang notificatie
 
 
