--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -82,3 +82,4 @@ label.ManageParticipants=Mitglieder verwalten
 label.updateParticipant=Update Participant
 label.Participants=Deelnemers
 label.loginError=Login Failed
+label.invite=Invite
