--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -81,3 +81,4 @@ label.ManageParticipants=Beheer deelnemers
 label.updateParticipant=Deelnemer wijzigen
 label.Participants=Deelnemers
 label.loginError=Login Failed
+label.invite=Invite
