--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -81,3 +81,4 @@ label.ManageParticipants=Gérer les membres
 label.updateParticipant=Update Participant
 label.Participants=Deelnemers
 label.loginError=Login Failed
+label.invite=Invite
