--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -84,4 +84,5 @@ label.Participants=Deelnemers
 label.loginError=Login Failed
 label.invite=Invite
 label.ManageStoppingPoints=Manage stopping points
+label.login=Please Login
 
