--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -85,5 +85,6 @@ label.loginError=Login Failed
 label.invite=Invite
 label.ManageStoppingPoints=Manage stopping points
 label.ReceiveNotification=Ontvang notificatie
+label.login=Please Login
 
 
