--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -84,3 +84,4 @@ label.loginError=Login Failed
 label.invite=Invite
 label.ManageStoppingPoints=Manage stopping points
 label.ReceiveNotification=Ontvang notificatie
+label.login=Please Login
