--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -84,3 +84,4 @@ label.loginError=Login Failed
 label.invite=Invite
 label.ManageStoppingPoints=Beheer stopplaatsen
 label.ReceiveNotification=Ontvang notificatie
+label.login=Please Login
