--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -85,4 +85,8 @@ label.loginError=Login Failed
 label.invite=Invite
 label.ManageStoppingPoints=Manage stopping points
 label.login=Please Login
+label.SaveSettings=Save settings
+label.showMap=Show map
+label.ModeOfTravel=Mode of travel
+label.LocationName=Location name
 
