--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -84,7 +84,10 @@ label.Participants=Participants
 label.loginError=Login Failed
 label.invite=Invite
 label.ManageStoppingPoints=Manage stopping points
-label.ReceiveNotification=Ontvang notificatie
 label.login=Please Login
+label.showMap=Show map
+label.SaveSettings=Save settings
+label.ModeOfTravel=Mode of travel
+label.LocationName=Location name
 
 
