--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -85,3 +85,7 @@ label.invite=Invite
 label.ManageStoppingPoints=Manage stopping points
 label.ReceiveNotification=Ontvang notificatie
 label.login=Please Login
+label.SaveSettings=Save settings
+label.showMap=Show map
+label.ModeOfTravel=Mode of travel
+label.LocationName=Location name
