--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -85,3 +85,7 @@ label.invite=Invite
 label.ManageStoppingPoints=Beheer stopplaatsen
 label.ReceiveNotification=Ontvang notificatie
 label.login=Please Login
+label.showMap=Toon kaart
+label.SaveSettings=Save settings
+label.ModeOfTravel=Mode of travel
+label.LocationName=Location name
