--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -89,3 +89,10 @@ label.SaveSettings=Save settings
 label.showMap=Show map
 label.ModeOfTravel=Mode of travel
 label.LocationName=Location name
+label.badMapEntry=Invalid entry\: this place doesn't excist\!
+label.Driving=Driving
+label.Walking=Walking
+label.Bicycling=Bicycling
+label.Transit=Transit
+label.information=Information
+label.goodMapEntry=Good entry, this place excists\!
