--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -89,5 +89,12 @@ label.showMap=Show map
 label.SaveSettings=Save settings
 label.ModeOfTravel=Mode of travel
 label.LocationName=Location name
+label.badMapEntry=Invalid entry\: this place doesn't excist\!
+label.Driving=Driving
+label.Walking=Walking
+label.Bicycling=Bicycling
+label.Transit=Transit
+label.information=Information
+label.goodMapEntry=Good entry, this place excists\!
 
 
