--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -96,4 +96,7 @@ label.Bicycling=Bicycling
 label.Transit=Transit
 label.information=Information
 label.goodMapEntry=Good entry, this place excists\!
+label.showRoute=Show route
+label.StoppingPointName=Stoppingpoint name
+label.StoppingPointType=Stoppingpoint type
 
