--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -96,5 +96,8 @@ label.Bicycling=Bicycling
 label.Transit=Transit
 label.information=Information
 label.goodMapEntry=Good entry, this place excists\!
+label.showRoute=Show route
+label.StoppingPointName=Stoppingpoint name
+label.StoppingPointType=Stoppingpoint type
 
 
