--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -96,3 +96,6 @@ label.Bicycling=Bicycling
 label.Transit=Transit
 label.information=Information
 label.goodMapEntry=Good entry, this place excists\!
+label.showRoute=Show route
+label.StoppingPointName=Stoppingpoint name
+label.StoppingPointType=Stoppingpoint type
