--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -99,5 +99,6 @@ label.goodMapEntry=Good entry, this place excists\!
 label.showRoute=Show route
 label.StoppingPointName=Stoppingpoint name
 label.StoppingPointType=Stoppingpoint type
+label.StoppingPointInfo=Stopping point info
 
 
