--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -99,4 +99,5 @@ label.goodMapEntry=Good entry, this place excists\!
 label.showRoute=Show route
 label.StoppingPointName=Stoppingpoint name
 label.StoppingPointType=Stoppingpoint type
+label.StoppingPointInfo=Stopping point info
 
