--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -99,3 +99,4 @@ label.goodMapEntry=Good entry, this place excists\!
 label.showRoute=Show route
 label.StoppingPointName=Stoppingpoint name
 label.StoppingPointType=Stoppingpoint type
+label.StoppingPointInfo=Stopping point info
