--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -100,3 +100,9 @@ label.showRoute=Show route
 label.StoppingPointName=Stoppingpoint name
 label.StoppingPointType=Stoppingpoint type
 label.StoppingPointInfo=Stopping point info
+label.MyOrganisedTrips=My organised trips
+label.MyJoinedTrips=My joined trips
+label.FoundOnTripName=Found on trip name
+label.FoundOnTripCategory=Found on trip category
+label.Manage=Manage
+label.ManageCategories=Manage categories
