--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -106,3 +106,6 @@ label.FoundOnTripName=Found on trip name
 label.FoundOnTripCategory=Found on trip category
 label.Manage=Manage
 label.ManageCategories=Manage categories
+label.Background=Background
+label.FontTitle=Font title
+label.FontContent=Font content
