--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -109,3 +109,4 @@ label.ManageCategories=Manage categories
 label.Background=Background
 label.FontTitle=Font title
 label.FontContent=Font content
+label.photo=Photo
