--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -106,6 +106,7 @@ label.FoundOnTripName=Found on trip name
 label.FoundOnTripCategory=Found on trip category
 label.Manage=Manage
 label.ManageCategories=Manage categories
+label.photo=Photo
 label.Background=Background
 label.FontTitle=Font title
 label.FontContent=Font content
