--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -110,5 +110,10 @@ label.photo=Photo
 label.Background=Background
 label.FontTitle=Font title
 label.FontContent=Font content
+label.NoTripNamesFound=Found no trips with name
+label.NoTripCategoriesFound=Found no trips with category
+label.NoTripsAvailable=There are currently no trips in our database, feel free to add a trip\!
+label.NoOrganisedTripsAvailable=You have no organised trips\!
+label.NoParticipatedTripsAvailable=You haven't participated any trips\!
 
 
