--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -115,3 +115,7 @@ label.NoTripCategoriesFound=Found no trips with category
 label.NoTripsAvailable=There are currently no trips in our database, feel free to add a trip\!
 label.NoOrganisedTripsAvailable=You have no organised trips\!
 label.NoParticipatedTripsAvailable=You haven't participated any trips\!
+label.LoginDataIncorrect=The login information you have given is incorrect\!
+label.YouMustBeLoggedIn=You must be logged in to visit this page
+label.NotRegistered=Not registered?
+label.RegisterHere=Register here\!
