--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -119,4 +119,7 @@ label.LoginDataIncorrect=The login information you have given is incorrect\!
 label.YouMustBeLoggedIn=You must be logged in to visit this page
 label.NotRegistered=Not registered?
 label.RegisterHere=Register here\!
+label.sendMail=Send mail
+label.skipMail=Skip
+label.viewTheTrip=For more information visit the trip
 
