--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -27,7 +27,7 @@ label.Released=Released
 label.ChangedTo=changed to
 label.NotificationMailTitle=Send notification mail
 label.NotificationMailQuestion=Send email to all participants?
-label.NotificationMailOrganiserMessage=Organiser message
+label.NotificationMailOrganiserMessage=Message from
 label.NotificationMailChangesOccured=The following changes occured
 label.NotificationMailNoMessage=No message.
 label.tripCategoryName=Category name
@@ -119,5 +119,8 @@ label.LoginDataIncorrect=The login information you have given is incorrect\!
 label.YouMustBeLoggedIn=You must be logged in to visit this page
 label.NotRegistered=Not registered?
 label.RegisterHere=Register here\!
+label.sendMail=Send mail
+label.skipMail=Skip
+label.viewTheTrip=For more information visit the trip
 
 
