--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -27,7 +27,7 @@ label.Released=Vrijgegeven
 label.ChangedTo=gewijzigd naar
 label.NotificationMailTitle=Zend notificatie mail
 label.NotificationMailQuestion=Email naar alle deelnemers verzenden?
-label.NotificationMailOrganiserMessage=Bericht van de organisator
+label.NotificationMailOrganiserMessage=Bericht van
 label.NotificationMailChangesOccured=De volgende wijzigen zijn gebeurt
 label.NotificationMailNoMessage=Geen bericht.
 label.tripCategoryName=Categorie naam
@@ -119,3 +119,6 @@ label.LoginDataIncorrect=The login information you have given is incorrect\!
 label.YouMustBeLoggedIn=You must be logged in to visit this page
 label.NotRegistered=Not registered?
 label.RegisterHere=Register here\!
+label.sendMail=Send mail
+label.skipMail=Skip
+label.viewTheTrip=For more information visit the trip
