--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -119,3 +119,7 @@ label.LoginDataIncorrect=The login information you have given is incorrect\!
 label.YouMustBeLoggedIn=You must be logged in to visit this page
 label.NotRegistered=Not registered?
 label.RegisterHere=Register here\!
+label.Vraag=Question
+label.Antwoord=Answer
+label.CorrectAntwoord=Correct Answer
+label.Antwoorden=Answers
