--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -122,4 +122,7 @@ label.RegisterHere=Register here\!
 label.sendMail=Send mail
 label.skipMail=Skip
 label.viewTheTrip=For more information visit the trip
+label.tripVisible=Trip visible in search
+label.tripAdd=Add
+label.removeSelected=Remove selected
 
