--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -129,4 +129,5 @@ label.viewTheTrip=For more information visit the trip
 label.tripVisible=Trip visible in search
 label.tripAdd=Add
 label.removeSelected=Remove selected
+label.Tweet=Tweet
 
