--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -129,5 +129,6 @@ label.viewTheTrip=For more information visit the trip
 label.tripVisible=Trip visible in search
 label.tripAdd=Add
 label.removeSelected=Remove selected
+label.Tweet=Tweet
 
 
