--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -129,3 +129,4 @@ label.viewTheTrip=For more information visit the trip
 label.tripVisible=Trip visible in search
 label.tripAdd=Add
 label.removeSelected=Remove selected
+label.Tweet=Tweet
